syntax = "proto3";

package user;
option go_package = ".";

service UserService {
	rpc SignUp(SignUpUserRequest) returns (SignUpUserResponse);
	rpc SignIn(SignInRequest) returns (SignInResponse);
	rpc GetBusinessId(GetBusinessIdRequest) returns (GetBusinessIdResponse);
}

enum UserStatus {
	ACTIVE = 0;
	INACTIVE = 1;
	BANNED = 2;
}

enum UserRole {
	UNKNOWN = 0;
	ADMIN = 1;
	CONSUMER = 2;
	MANAGER = 3;
	VENDOR = 4;
	ASSISTANT = 5;
}

message User {
	string			email = 1;
	string			password = 2;
	string			phone_number = 3;
	string			first_name = 4;
	string			middle_name = 5;
	string			last_name = 6;
	UserStatus		status = 7;
	UserRole		role = 8;
	string			avatar = 9;
	string			location = 10;
	int32			business_id = 11;
	string			id = 12;
	int32			vendor_id = 13;
}

message SuccessMessage {
	string	user_id = 1;
	string 	auth_token = 2;
	string 	first_name = 3;
	string	middle_name = 4;
	string	last_name = 5;
	string	avatar = 6;
	string	email = 7;
}

message ErrorMessage {
	string	message = 1;
}

message SignUpUserRequest {
	User user = 1;
}

message SignUpUserResponse {
	bool success = 1;
	ErrorMessage err_message = 2;
}


message SignInRequest {
	string	email = 1;
	string	password = 2;
}

message AuthTK {
	string	user_id = 1;
	string	token = 2;
}

message SignInResponse {
	bool	success = 1;
	oneof result {
		ErrorMessage err_message = 2;
		AuthTK auth_tk = 3;
	}
}

message GetBusinessIdRequest {
	string	user_id = 1;
}

message GetBusinessIdResponse {
	bool	success = 1;
	oneof result {
		string	err_message = 2;
		int32	business_id = 3;
	}
}